# m5epd-ha-remote

./: .gitignore  Cargo.toml  README.md  attach-usb.ps1  cargo-fix-all.sh  cfg.toml.template  display-1.sh  sdkconfig.defaults
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/docs/: README.md
crates/app/scripts/: flash.sh
crates/app/src/: hardware.rs  main.rs  network.rs  state_container.rs  ui.rs
crates/display/: Cargo.toml
crates/display/examples/: screen1.rs
crates/display/src/: layout_adapter.rs  lib.rs  renderer.rs  state.rs  table.rs  util.rs
docs/: reference-docs.md
