[package]
name = "app"
version = "0.1.0"
authors = ["kolupaev"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "app"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["experimental", "wake-from-isr", "critical-section",  "embassy-sync", "embassy-time-driver"] }

toml-cfg = "0.2.0"
embassy-futures = "0.1"
embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embassy-sync = "0.6.1"
it8951 = { git = "https://github.com/kolupaev/it8951.git", default-features = false, features = ["log_max_level_info"]}
display = { path = "../display" }
embedded-graphics = "0.8.1"

dummy-pin = "1.0.0"
uom = "0.36.0"
u8g2-fonts = { version = "0.5.1", features = ["embedded_graphics_textstyle", "std"] }
async-rwlock = "1.3.0"
asyncs-sync = "0.3.0"
average = "0.15.1"
simple_moving_average = "1.0.2"
interp = "2.0.1"
serde_json = "1.0"


[build-dependencies]
embuild = "0.33.0"
toml-cfg = "0.2.0"

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
